ajustes realizados para a leitura de 2018

--- a/projetos/templates/index_professor.html
+++ b/projetos/templates/index_professor.html
@@ -49,6 +49,7 @@
     <h5>Avaliações</h5>
     <ul>
         <a href="{% url 'resultado_avaliacoes' %}"><li>Resultados</li></a>
+        <a href="{% url 'graficos' %}"><li>Gráficos</li></a>
     </ul>
 
 {% endblock %}
