--- a/users/templates/users/alunos_lista.html
+++ b/users/templates/users/alunos_lista.html
@@ -6,6 +6,7 @@
 {% endcomment %}
 
 {% block head %}
+  {% load dictionary %}
   {% load static %}
   <script src="https://www.w3schools.com/lib/w3.js"></script>
   <script src="{% static 'js/Chart.min.js' %}"></script>
@@ -94,11 +95,13 @@
           <td class="{% if configuracao.ano == aluno.anoPFE and configuracao.semestre == aluno.semestrePFE %}text-success{% endif %}">
             {% if aluno.alocacao_set.all %}
               {% for alocacao in aluno.alocacao_set.all %}
-                <a href="{% url 'projeto_completo' alocacao.projeto.id %}">
-                  {% if alocacao.projeto.avancado %}<u>{% endif %}
-                  {{alocacao.projeto.ano}}.{{alocacao.projeto.semestre}}<br>
-                  {% if alocacao.projeto.avancado %}</u>{% endif %}
-                </a>
+                {% if alocacao.projeto.ano == ano and alocacao.projeto.semestre == semestre %}
+                  <a href="{% url 'projeto_completo' alocacao.projeto.id %}">
+                    {% if alocacao.projeto.avancado %}<u>{% endif %}
+                    {{alocacao.projeto.ano}}.{{alocacao.projeto.semestre}}<br>
+                    {% if alocacao.projeto.avancado %}</u>{% endif %}
+                  </a>
+                {% endif %}
               {% endfor %}
             {% else %}
               {% if aluno.anoPFE and aluno.semestrePFE %}
@@ -125,7 +128,7 @@
             {% endif %}
           </td>
           <td> <!-- Média -->
-            {% with media=aluno.get_media %}
+            {% with media=aluno.get_medias|dict_key:ano_semestre %}
               {% if media.pesos != 1 %}
                 <a style="color:red" data-toggle="tooltip" data-html="true" animation="true" title="Pesos da média diferente de 100%">
               {% endif %}    
@@ -136,9 +139,9 @@
             {% endwith %}
           </td>
           <td><table><tr>
-          {% for aval, nota, peso in aluno.get_notas %} <!-- Notas -->
-            <td>{{aval}}({% widthratio peso 1 100 %}%)={{nota|floatformat:1}}</td>
-          {% endfor %}
+            {% for aval, nota, peso in aluno.get_notas|dict_key:ano_semestre %} <!-- Notas -->
+              <td>{{aval}}({% widthratio peso 1 100 %}%)={{nota|floatformat:1}}</td>
+            {% endfor %}
           </tr></table></td>
         </tr>
         {% endfor %}
