--- a/templates/areas.html
+++ b/templates/areas.html
@@ -5,138 +5,19 @@
 {% endcomment %}
 
 <table>
-
-    <tr><td>&nbsp;<input type="checkbox" name="selection" id="inovacao_social" value="inovacao_social" 
-            {% if areas %}{% if areas.inovacao_social %}checked{% endif %}{% endif %}
-            {% if vencido %}disabled{% endif %}>&nbsp;
-        </td>
-        <td><label for="inovacao_social" style="line-height:0.6em;">Inovação Social</label></td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" id="ciencia_dos_dados" value="ciencia_dos_dados" 
-            {% if areas %}{% if areas.ciencia_dos_dados %}checked{% endif %}{% endif %}
-            {% if vencido %}disabled{% endif %}>&nbsp;
-        </td>
-        <td><label for="ciencia_dos_dados" style="line-height:0.6em;">Ciência dos Dados</label></td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" id="modelagem_3D" value="modelagem_3D" 
-            {% if areas %}{% if areas.modelagem_3D %}checked{% endif %}{% endif %}
-            {% if vencido %}disabled{% endif %}>&nbsp;
-        </td>
-        <td><label for="modelagem_3D" style="line-height:0.6em;">Modelagem 3D</label></td>
-    </tr>      
-    <tr><td>&nbsp;<input type="checkbox" name="selection" id="manufatura" value="manufatura" 
-            {% if areas %}{% if areas.manufatura %}checked{% endif %}{% endif %}
-            {% if vencido %}disabled{% endif %}>&nbsp;
-        </td>
-        <td><label for="manufatura" style="line-height:0.6em;">Manufatura</label></td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" id="resistencia_dos_materiais" value="resistencia_dos_materiais" 
-            {% if areas %}{% if areas.resistencia_dos_materiais %}checked{% endif %}{% endif %}
-            {% if vencido %}disabled{% endif %}>&nbsp;
-        </td>
-        <td><label for="resistencia_dos_materiais" style="line-height:0.6em;">Resistência dos Materiais</label></td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" id="modelagem_de_sistemas" value="modelagem_de_sistemas" 
-            {% if areas %}{% if areas.modelagem_de_sistemas %}checked{% endif %}{% endif %}
-            {% if vencido %}disabled{% endif %}>&nbsp;
-        </td>
-        <td><label for="modelagem_de_sistemas" style="line-height:0.6em;">Modelagem de Sistemas</label></td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" id="controle_e_automacao" value="controle_e_automacao" 
-            {% if areas %}{% if areas.controle_e_automacao %}checked{% endif %}{% endif %}
-            {% if vencido %}disabled{% endif %}>&nbsp;
-        </td>
-        <td><label for="controle_e_automacao" style="line-height:0.6em;">Controle e Automação</label></td>
-    </tr>      
-    <tr><td>&nbsp;<input type="checkbox" name="selection" id="termodinamica" value="termodinamica" 
-            {% if areas %}{% if areas.termodinamica %}checked{% endif %}{% endif %}
-            {% if vencido %}disabled{% endif %}>&nbsp;
-        </td>
-        <td><label for="termodinamica" style="line-height:0.6em;">Termodinâmica</label></td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" id="fluidodinamica" value="fluidodinamica" 
-            {% if areas %}{% if areas.fluidodinamica %}checked{% endif %}{% endif %}
-            {% if vencido %}disabled{% endif %}>&nbsp;
-        </td>
-        <td><label for="fluidodinamica" style="line-height:0.6em;">Fluidodinâmica</label></td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" id="eletronica_digital" value="eletronica_digital" 
-            {% if areas %}{% if areas.eletronica_digital %}checked{% endif %}{% endif %}
-            {% if vencido %}disabled{% endif %}>&nbsp;
-        </td>
-        <td><label for="eletronica_digital" style="line-height:0.6em;">Eletrônica Digital</label></td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" id="programacao" value="programacao" 
-            {% if areas %}{% if areas.programacao %}checked{% endif %}{% endif %}
-            {% if vencido %}disabled{% endif %}>&nbsp;
-        </td>
-        <td><label for="programacao" style="line-height:0.6em;">Programação</label></td>
-    </tr>      
-    <tr><td>&nbsp;<input type="checkbox" name="selection" id="inteligencia_artificial" value="inteligencia_artificial" 
-            {% if areas %}{% if areas.inteligencia_artificial %}checked{% endif %}{% endif %}
-            {% if vencido %}disabled{% endif %}>&nbsp;
-        </td>
-        <td><label for="inteligencia_artificial" style="line-height:0.6em;">Inteligência Artificial</label></td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" id="computacao_em_nuvem" value="computacao_em_nuvem" 
-            {% if areas %}{% if areas.computacao_em_nuvem %}checked{% endif %}{% endif %}
-            {% if vencido %}disabled{% endif %}>&nbsp;
-        </td>
-        <td><label for="computacao_em_nuvem" style="line-height:0.6em;">Computação em Nuvem</label></td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" id="banco_de_dados" value="banco_de_dados" 
-            {% if areas %}{% if areas.banco_de_dados %}checked{% endif %}{% endif %}
-            {% if vencido %}disabled{% endif %}>&nbsp;
-        </td>
-        <td><label for="banco_de_dados" style="line-height:0.6em;">Banco de Dados</label></td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" id="visao_computacional" value="visao_computacional" 
-            {% if areas %}{% if areas.visao_computacional %}checked{% endif %}{% endif %}
-            {% if vencido %}disabled{% endif %}>&nbsp;
-        </td>
-        <td><label for="visao_computacional" style="line-height:0.6em;">Visão Computacional</label></td>
-    </tr>      
-    <tr><td>&nbsp;<input type="checkbox" name="selection" id="computacao_de_alto_desempenho" value="computacao_de_alto_desempenho" 
-            {% if areas %}{% if areas.computacao_de_alto_desempenho %}checked{% endif %}{% endif %}
-            {% if vencido %}disabled{% endif %}>&nbsp;
-        </td>
-        <td><label for="computacao_de_alto_desempenho" style="line-height:0.6em;">Computação de Alto Desempenho</label></td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" id="robotica" value="robotica"
-            {% if areas %}{% if areas.robotica %}checked{% endif %}{% endif %}
-            {% if vencido %}disabled{% endif %}>&nbsp;
-        </td>
-        <td><label for="robotica" style="line-height:0.6em;">Robótica</label></td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" id="realidade_virtual_aumentada" value="realidade_virtual_aumentada" 
-            {% if areas %}{% if areas.realidade_virtual_aumentada %}checked{% endif %}{% endif %}
-            {% if vencido %}disabled{% endif %}>&nbsp;
-        </td>
-        <td><label for="realidade_virtual_aumentada" style="line-height:0.6em;">Realidade Virtual/Aumentada</label></td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" id="protocolos_de_comunicacao" value="protocolos_de_comunicacao" 
-            {% if areas %}{% if areas.protocolos_de_comunicacao %}checked{% endif %}{% endif %}
-            {% if vencido %}disabled{% endif %}>&nbsp;
-        </td>
-        <td><label for="protocolos_de_comunicacao" style="line-height:0.6em;">Protocolos de Comunicação</label></td>
-    </tr>      
-    <tr><td>&nbsp;<input type="checkbox" name="selection" id="eficiencia_energetica" value="eficiencia_energetica" 
-            {% if areas %}{% if areas.eficiencia_energetica %}checked{% endif %}{% endif %}
-            {% if vencido %}disabled{% endif %}>&nbsp;
-        </td>
-        <td><label for="eficiencia_energetica" style="line-height:0.6em;">Eficiência Energética</label></td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" id="administracao_economia_financas" value="administracao_economia_financas" 
-            {% if areas %}{% if areas.administracao_economia_financas %}checked{% endif %}{% endif %}
-            {% if vencido %}disabled{% endif %}>&nbsp;
-        </td>
-        <td><label for="administracao_economia_financas" style="line-height:0.6em;">Administração, Economia e Finanças</label></td>
-    </tr>
-
+    {% for area in areast %}
+        <tr><td>&nbsp;<input type="checkbox" name="selection" id="{{area.id}}" value="{{area.titulo}}"
+                {% for a in aa %}
+                    {% if area == a.area %}checked{% endif %}
+                {% endfor %}
+                {% if vencido %}disabled{% endif %}>&nbsp;
+            </td>
+            <td><label for="{{area.id}}" style="line-height:0.6em;">{{area.titulo}}</label></td>
+        </tr>
+    {% endfor %}
 </table>
 <div style="height:8px;font-size:8px;">&nbsp;</div>
 <label for="outras">Outras:</label> 
-<input type="text" size="30" maxlength="128" id="outras" name="outras" 
-value="{% if areas and areas.outras %}{{areas.outras}}{% endif %}"
-{% if vencido %}disabled{% endif %}>
-
+<textarea type="text" cols="29" maxlength="128" id="outras" name="outras" wrap="soft"
+{% if vencido %}disabled{% endif %}
+>{% for a in aa %}{% if a.outras %}{{a.outras}}{% endif %}{% endfor %}</textarea>
