--- a/users/templates/users/aluno_detail.html
+++ b/users/templates/users/aluno_detail.html
@@ -40,116 +40,12 @@
 
   <br>
   <strong>Áreas de interesse selecionadas:</strong>
-  <table>
-      <tr><td>&nbsp;<input type="checkbox"  onclick="return false;"
-              {% if aluno.areas_de_interesse.inovacao_social %}checked{% endif %}>&nbsp;
-          </td>
-          <td>Inovação Social</td>
-      </tr>
-      <tr><td>&nbsp;<input type="checkbox"  onclick="return false;" 
-              {% if aluno.areas_de_interesse.ciencia_dos_dados %}checked{% endif %}>&nbsp;
-          </td>
-          <td>Ciência dos Dados</td>
-      </tr>
-      <tr><td>&nbsp;<input type="checkbox"  onclick="return false;"
-              {% if aluno.areas_de_interesse.modelagem_3D %}checked{% endif %}>&nbsp;
-          </td>
-          <td>Modelagem 3D</td>
-      </tr>      
-      <tr><td>&nbsp;<input type="checkbox"  onclick="return false;"
-              {% if aluno.areas_de_interesse.manufatura %}checked{% endif %}>&nbsp;
-          </td>
-          <td>Manufatura</td>
-      </tr>
-      <tr><td>&nbsp;<input type="checkbox"  onclick="return false;"
-              {% if aluno.areas_de_interesse.resistencia_dos_materiais %}checked{% endif %}>&nbsp;
-          </td>
-          <td>Resistência dos Materiais</td>
-      </tr>
-      <tr><td>&nbsp;<input type="checkbox"  onclick="return false;"
-              {% if aluno.areas_de_interesse.modelagem_de_sistemas %}checked{% endif %}>&nbsp;
-          </td>
-          <td>Modelagem de Sistemas</td>
-      </tr>
-      <tr><td>&nbsp;<input type="checkbox"  onclick="return false;"
-              {% if aluno.areas_de_interesse.controle_e_automacao %}checked{% endif %}>&nbsp;
-          </td>
-          <td>Controle e Automação</td>
-      </tr>      
-      <tr><td>&nbsp;<input type="checkbox"  onclick="return false;"
-              {% if aluno.areas_de_interesse.termodinamica %}checked{% endif %}>&nbsp;
-          </td>
-          <td>Termodinâmica</td>
-      </tr>
-      <tr><td>&nbsp;<input type="checkbox"  onclick="return false;"
-              {% if aluno.areas_de_interesse.fluidodinamica %}checked{% endif %}>&nbsp;
-          </td>
-          <td>Fluidodinâmica</td>
-      </tr>
-      <tr><td>&nbsp;<input type="checkbox"  onclick="return false;"
-              {% if aluno.areas_de_interesse.eletronica_digital %}checked{% endif %}>&nbsp;
-          </td>
-          <td>Eletrônica Digital</td>
-      </tr>
-      <tr><td>&nbsp;<input type="checkbox"  onclick="return false;"
-              {% if aluno.areas_de_interesse.programacao %}checked{% endif %}>&nbsp;
-          </td>
-          <td>Programação</td>
-      </tr>      
-      <tr><td>&nbsp;<input type="checkbox"  onclick="return false;"
-              {% if aluno.areas_de_interesse.inteligencia_artificial %}checked{% endif %}>&nbsp;
-          </td>
-          <td>Inteligência Artificial</td>
-      </tr>
-      <tr><td>&nbsp;<input type="checkbox"  onclick="return false;"
-              {% if aluno.areas_de_interesse.computacao_em_nuvem %}checked{% endif %}>&nbsp;
-          </td>
-          <td>Computação em Nuvem</td>
-      </tr>
-      <tr><td>&nbsp;<input type="checkbox"  onclick="return false;"
-              {% if aluno.areas_de_interesse.banco_de_dados %}checked{% endif %}>&nbsp;
-          </td>
-          <td>Banco de Dados</td>
-      </tr>
-      <tr><td>&nbsp;<input type="checkbox"  onclick="return false;"
-              {% if aluno.areas_de_interesse.visao_computacional %}checked{% endif %}>&nbsp;
-          </td>
-          <td>Visão Computacional</td>
-      </tr>      
-      <tr><td>&nbsp;<input type="checkbox"  onclick="return false;"
-              {% if aluno.areas_de_interesse.computacao_de_alto_desempenho %}checked{% endif %}>&nbsp;
-          </td>
-          <td>Computação de Alto Desempenho</td>
-      </tr>
-      <tr><td>&nbsp;<input type="checkbox"  onclick="return false;"
-              {% if aluno.areas_de_interesse.robotica %}checked{% endif %}>&nbsp;
-          </td>
-          <td>Robótica</td>
-      </tr>
-      <tr><td>&nbsp;<input type="checkbox"  onclick="return false;"
-              {% if aluno.areas_de_interesse.realidade_virtual_aumentada %}checked{% endif %}>&nbsp;
-          </td>
-          <td>Realidade Virtual/Aumentada</td>
-      </tr>
-      <tr><td>&nbsp;<input type="checkbox"  onclick="return false;"
-              {% if aluno.areas_de_interesse.protocolos_de_comunicacao %}checked{% endif %}>&nbsp;
-          </td>
-          <td>Protocolos de Comunicação</td>
-      </tr>      
-      <tr><td>&nbsp;<input type="checkbox"  onclick="return false;"
-              {% if aluno.areas_de_interesse.eficiencia_energetica %}checked{% endif %}>&nbsp;
-          </td>
-          <td>Eficiência Energética</td>
-      </tr>
-      <tr><td>&nbsp;<input type="checkbox"  onclick="return false;"
-              {% if aluno.areas_de_interesse.administracao_economia_financas %}checked{% endif %}>&nbsp;
-          </td>
-          <td>Administração, Economia e Finanças</td>
-      </tr>
-    </table>
-    {% if aluno.areas_de_interesse.outras %}
-        <b>Outras:</b> {{aluno.areas_de_interesse.outras}}<br>
-    {% endif %}
+  {% with aa=aluno.user.areadeinteresse_set.all %}
+    {% with vencido=True %}
+      {% include "areas.html" %}
+    {% endwith %}
+  {% endwith %}
+  <br>
 
     {% if aluno.alocacao_set.all.count > 0 %}
         <hr>
