--- a/templates/areas.html
+++ b/templates/areas.html
@@ -4,15 +4,28 @@
     Data: 21 de Abril de 2020
 {% endcomment %}
 
+<script>
+    $(document).ready(function(){
+        $('[data-toggle="tooltip"]').tooltip();
+    });
+</script>
+
 <table>
     {% for area in areast %}
-        <tr><td>&nbsp;<input type="checkbox" name="selection" id="{{area.id}}" value="{{area.titulo}}"
+        <tr><td>&nbsp;
+                <input type="checkbox" name="selection" id="{{area.id}}" value="{{area.titulo}}"
                 {% for a in aa %}
                     {% if area == a.area %}checked{% endif %}
                 {% endfor %}
                 {% if vencido %}disabled{% endif %}>&nbsp;
             </td>
-            <td><label for="{{area.id}}" style="line-height:0.6em;">{{area.titulo}}</label></td>
+            <td 
+                {% if area.descricao %}
+                    data-toggle="tooltip" data-html="true" animation="true" title="{{area.descricao}}"
+                {% endif %}
+                >
+                <label for="{{area.id}}" style="line-height:0.6em;">{{area.titulo}}</label>
+            </td>
         </tr>
     {% endfor %}
 </table>
