--- a/projetos/templates/projetos/distribuicao_areas.html
+++ b/projetos/templates/projetos/distribuicao_areas.html
@@ -10,6 +10,7 @@
   <link href="{% static 'css/horizBarChart.css' %}" media="all" rel="stylesheet" type="text/css" />
   <script src="{% static 'js/jquery.min.js' %}"></script>
   <script src="{% static 'js/jquery.horizBarChart.min.js' %}"></script>
+
   <script>
     function bar(){
       $('.chart').horizBarChart({
@@ -19,33 +20,45 @@
     }
     $(document).ready(bar);
   </script>
+
+    <script>
+        $(document).ready(function(){
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
 {% endblock %}
 
 {% block content %}
 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <label for="filter">Edição:</label>
+    <label for="filter"><b>Edição:</b></label>
     <select class="filter" data-tableId="projetos">
         <option value="todas">todas</option>
-        <option value="2018.2" {% if periodo == "2018.2" %}selected="selected"{% endif %}>2018.2</option>
-        <option value="2019.1" {% if periodo == "2019.1" %}selected="selected"{% endif %}>2019.1</option>
-        <option value="2019.2" {% if periodo == "2019.2" %}selected="selected"{% endif %}>2019.2</option>
-        <option value="2020.1" {% if periodo == "2020.1" %}selected="selected"{% endif %}>2020.1</option>
-        <option value="2020.2" {% if periodo == "2020.2" %}selected="selected"{% endif %}>2020.2</option>
+        {% for loop in loop_anos %}
+            <option value="{{loop}}.2" {% if ano == loop and semestre == 2 %}selected{% endif %}>{{loop}}.2</option>
+            <option value="{{loop|add:1}}.1" {% if ano == loop|add:1 and semestre == 1 %}selected{% endif %}>{{loop|add:1}}.1</option>
+        {% endfor %}
     </select>
     <br>
 
-    <div class="2areas2">
+    <div class="2areas2" style="line-height: 1.3;">
         <ul class="chart">
         <h3><li class="title" title="Tendência de Áreas de Interesse ({{tipo}})"></li></h3>
         <li></li>
         <li></li>
 
         {% for key, value in areaspfe.items %}
-            <li class="title" title="{{key}}"></li>
-            <li class="past" title="">
-                <span class="bar" data-number="{{value}}"></span>
-                <span class="number">{{value}}</span>
+            <span
+                {% comment %} Tooltip para a descrição da área de interesse. {% endcomment %}
+                {% if value.1 %}
+                    data-toggle="tooltip" data-html="true" animation="true" title="{{value.1}}"
+                {% endif %}
+                >
+                {{key}}<br>
+            </span>
+            <li class="past" title="" style="margin-top:0px; margin-bottom: 12px;">
+                <span class="bar" data-number="{{value.0}}"></span>
+                <span class="number">{{value.0}}</span>
             </li>
         {% endfor %}
 
