acertando texto para estudantes

--- a/projetos/templates/index_professor.html
+++ b/projetos/templates/index_professor.html
@@ -36,9 +36,9 @@
 
     <h5>Áreas de Interesse</h5>
     <ul>
-        <a href="{% url 'distribuicao_areas' 'alunos' %}"><li>Tendência dos Alunos</li></a>
-        <a href="{% url 'distribuicao_areas' 'propostas' %}"><li>Tendência das Propostas</li></a>
-        <a href="{% url 'distribuicao_areas' 'projetos' %}"><li>Tendência dos Projetos</li></a>
+        <a href="{% url 'distribuicao_areas' 'alunos' %}"><li>Tendência de Áreas de Interesse dos Estudantes</li></a>
+        <a href="{% url 'distribuicao_areas' 'propostas' %}"><li>Tendência de Áreas de Interesse nas Propostas</li></a>
+        <a href="{% url 'distribuicao_areas' 'projetos' %}"><li>Tendência de Áreas de Interesse nos Projetos</li></a>
     </ul>
 
     <h5>Feedbacks</h5>
