--- a/projetos/templates/projetos/avisos_listar.html
+++ b/projetos/templates/projetos/avisos_listar.html
@@ -25,7 +25,7 @@
     <option value="todos" {% if filtro == "todos" %}selected="selected"{% endif %}>todos</option>
     <option value="Co" {% if filtro == "Co" %}selected="selected"{% endif %}>Coordenação</option>
     <option value="Cm" {% if filtro == "Cm" %}selected="selected"{% endif %}>Comitê PFE</option>
-    <option value="Al" {% if filtro == "Al" %}selected="selected"{% endif %}>Todos os Alunos</option>
+    <option value="Al" {% if filtro == "Al" %}selected="selected"{% endif %}>Todos os Estudantes</option>
     <option value="Or" {% if filtro == "Or" %}selected="selected"{% endif %}>Todos os Orientadores</option>
     <option value="Og" {% if filtro == "Og" %}selected="selected"{% endif %}>Contatos nas Organizacoes</option>
     <option value="Ev" {% if filtro == "Ev" %}selected="selected"{% endif %}>Evento</option>
