--- a/projetos/templates/projetos/banca_ver.html
+++ b/projetos/templates/projetos/banca_ver.html
@@ -88,7 +88,7 @@
     </li>
     {% endif %}
   </ol>
-  <b>Alunos</b>
+  <b>Grupo</b>
   <ul>
     {% for alocacao in banca.projeto.alocacao_set.all %}
       <li>
