--- a/projetos/templates/projetos/bancas_lista.html
+++ b/projetos/templates/projetos/bancas_lista.html
@@ -97,7 +97,7 @@
             </li>
             {% endif %}
           </ol>
-          <b>Alunos</b>
+          <b>Grupo</b>
           <ul>
             {% for alocacao in banca.projeto.alocacao_set.all %}
               <li>
