--- a/projetos/templates/projetos/dinamicas.html
+++ b/projetos/templates/projetos/dinamicas.html
@@ -28,7 +28,7 @@
                 {{e.projeto.get_titulo}}
               </a><br>
               <b>Organização:</b> <a href="{% url 'organizacao_completo' e.projeto.organizacao.id %}">{{ e.projeto.organizacao.nome }}</a><br>
-              <b>Alunos:</b>
+              <b>Grupo:</b>
               <ol>
                 {% for alocacao in e.projeto.alocacao_set.all %} 
                   <li><a href="{% url 'aluno_detail' alocacao.aluno.id %}">{{alocacao.aluno.user.get_full_name}} [{{ alocacao.aluno.get_curso_display }}] &nbsp;
