ajutes do texto para estudantes

--- a/projetos/templates/projetos/mostra_feedback.html
+++ b/projetos/templates/projetos/mostra_feedback.html
@@ -27,15 +27,15 @@
 
   <br>
   <p>O projeto avançou conforme o esperado? Se SIM, você sabe qual foi a fórmula do sucesso?
-  Se NÃO, consegue identificar os motivos? Por exemplo: demora em fechar o escopo, alunos
-  pouco engajados, alunos com dúvidas básicas em determinado assunto, equipe não entrosada, ...</p>
+  Se NÃO, consegue identificar os motivos? Por exemplo: demora em fechar o escopo, estudantes
+  pouco engajados, estudantes com dúvidas básicas em determinado assunto, equipe não entrosada, ...</p>
   <textarea name="tecnico" rows="4" cols="80" maxlength="1000" readonly>
   {{feedback.tecnico}}
   </textarea>
   <br><br>
 
-  <p>Parte do esperado com essa atividade era que os alunos entendessem melhor qual era o desafio
-  proposto e discutissem com vocês como prototipar e implementar o acordado. Os alunos foram
+  <p>Parte do esperado com essa atividade era que os estudantes entendessem melhor qual era o desafio
+  proposto e discutissem com vocês como prototipar e implementar o acordado. Os estudantes foram
   ativos em se comunicar, entendendo o desejo de vocês (e de seus usuários finais se for o
   caso) e discutir possíveis soluções? Você pode comentar brevemente como foram essas interações?
   </p>
@@ -44,8 +44,8 @@
   </textarea>
   <br><br>
 
-  <p>A equipe de alunos alocada para o seu projeto estava devidamente organizada? Por exemplo:
-  os alunos foram pontuais nos encontros, se portaram de forma adequada, todos se dedicaram
+  <p>A equipe de estudantes alocada para o seu projeto estava devidamente organizada? Por exemplo:
+  os estudantes foram pontuais nos encontros, se portaram de forma adequada, todos se dedicaram
   de acordo, apresentaram uma proposta de condução do projeto adequada?
   </p>
   <textarea name="organizacao" rows="4" cols="80" maxlength="1000" readonly>
