--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -61,7 +61,7 @@
     {% endif %}
   {% endcomment %}
   {% if projeto.proposta.recursos %}
-    <br><strong>Recursos a serem disponibilizados aos Alunos :</strong> {{ projeto.proposta.recursos|linebreaks }}
+    <br><strong>Recursos a serem disponibilizados aos Estudantes :</strong> {{ projeto.proposta.recursos|linebreaks }}
   {% endif %}
   {% if projeto.proposta.anexo %}
     <br><strong>Anexo :</strong>
