--- a/projetos/templates/projetos/projetos_fechados.html
+++ b/projetos/templates/projetos/projetos_fechados.html
@@ -121,7 +121,7 @@
 
     <hr>
     <b>Total de projetos = <span id="myCountProj">{{ length }}</span> </b> <br>
-    <b>Total de alunos = <span id="myCountAlun">{{ nalunos }}</span> </b> <br>    
+    <b>Total de estudantes = <span id="myCountAlun">{{ nalunos }}</span> </b> <br>    
     <br><br>
 
     <div id="canvas-holder">
