--- a/projetos/templates/projetos/proposta_completa.html
+++ b/projetos/templates/projetos/proposta_completa.html
@@ -219,7 +219,7 @@
 
 
   <br><hr>
-  <h3>Perfil de Alunos Desejados para Proposta de Projeto</h3>
+  <h3>Perfil de Estudantes Desejados para Proposta de Projeto</h3>
   <table>
     <tr>
         <th style="text-align:center" >
