--- a/projetos/templates/projetos/relatorio_projetos.html
+++ b/projetos/templates/projetos/relatorio_projetos.html
@@ -40,7 +40,7 @@
           {% comment %}
             <strong>Áreas da engenharia envolvidas no projeto (habilidade necessárias):</strong> {{ projeto.areas|linebreaks }}
           {% endcomment %}
-          <strong>Recursos a serem disponibilizados aos Alunos :</strong> {{ projeto.proposta.recursos|linebreaks }}<br>
+          <strong>Recursos a serem disponibilizados aos Estudantes :</strong> {{ projeto.proposta.recursos|linebreaks }}<br>
           <strong>Outras observações :</strong> {{ projeto.proposta.observacoes|linebreaks }}<br>
           <hr>
           <h5>Organização: {{ projeto.organizacao.nome }}</h5>
