--- a/projetos/templates/projetos/bancas_agendamento.html
+++ b/projetos/templates/projetos/bancas_agendamento.html
@@ -81,7 +81,7 @@
             %0D%0A
             {% endif %}
           %0D%0A
-          Alunos
+          Grupo
           %0D%0A
             {% for alocacao in banca.projeto.alocacao_set.all %}
                 - {{alocacao.aluno.user.first_name|parse_quote}} {{alocacao.aluno.user.last_name|parse_quote}}
