--- a/projetos/templates/projetos/organizacoes_prospectadas.html
+++ b/projetos/templates/projetos/organizacoes_prospectadas.html
@@ -51,11 +51,11 @@
         </th>
         
         <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">
-          <a data-toggle="tooltip" data-html="true" animation="true" title="Contando somente as propostas já autorizadas e disponibilizadas para os alunos aplicarem"><small>Propostas<br>Disponíveis</small>
+          <a data-toggle="tooltip" data-html="true" animation="true" title="Contando somente as propostas já autorizadas e disponibilizadas para os estudantes aplicarem"><small>Propostas<br>Disponíveis</small>
         </th>
 
         <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center">
-          <a data-toggle="tooltip" data-html="true" animation="true" title="Contando todas as propostas submetidas pela organização, mesmo aquelas que não estão disponibilizadas para os alunos aplicarem"><small>Propostas<br>Enviadas</small>
+          <a data-toggle="tooltip" data-html="true" animation="true" title="Contando todas as propostas submetidas pela organização, mesmo aquelas que não estão disponibilizadas para os estudantes aplicarem"><small>Propostas<br>Enviadas</small>
         </th>
       </tr>
       {% for organizacao,disponiveis,submetidas,contato in organizacoes_list %} 
@@ -123,7 +123,7 @@
     &nbsp;<span style="background-color:lightgreen">&nbsp;&nbsp;&nbsp;&nbsp;</span> Confirmada (<script>document.write(confirmados);</script>)<br>
     <p>&nbsp;</p>
     <strong>Total de Propostas Submetidas:</strong> {{ total_disponiveis }}
-    <a data-toggle="tooltip" data-html="true" animation="true" title="Contando todas as propostas, incluindo as (ainda) não disponibilizadas para os alunos.">
+    <a data-toggle="tooltip" data-html="true" animation="true" title="Contando todas as propostas, incluindo as (ainda) não disponibilizadas para os estudantes.">
         ({{ total_submetidas }})
       </a><br>
 
