--- a/projetos/templates/projetos/projeto_detalhes.html
+++ b/projetos/templates/projetos/projeto_detalhes.html
@@ -70,7 +70,7 @@
       <strong data-toggle="tooltip" data-html="true" animation="true" title="
       Recursos que as organizações informaram que irão disponibilizar para os estudantes.
       O PFE irá auxiliar em um acesso facilitado para os diversos laboratórios da escola conforme sua disponibiidade.
-      Não existe nenhuma garantia que o PFE irá suprir material de consumo para os alunos, em geral não há recursos para isso.
+      Não existe nenhuma garantia que o PFE irá suprir material de consumo para os estudantes, em geral não há recursos para isso.
       ">
         Recursos a serem disponibilizados:
       </strong>
