--- a/projetos/templates/projetos/relatorio_feedbacks.html
+++ b/projetos/templates/projetos/relatorio_feedbacks.html
@@ -26,19 +26,19 @@
       <strong>Organização:</strong> {{ feedback.empresa }}<br>
       
       <p><strong>O projeto avançou conforme o esperado? Se SIM, você sabe qual foi a fórmula do sucesso?
-        Se NÃO, consegue identificar os motivos? Por exemplo: demora em fechar o escopo, alunos
-        pouco engajados, alunos com dúvidas básicas em determinado assunto, equipe não entrosada, ...</strong></p>
+        Se NÃO, consegue identificar os motivos? Por exemplo: demora em fechar o escopo, estudantes
+        pouco engajados, estudantes com dúvidas básicas em determinado assunto, equipe não entrosada, ...</strong></p>
       {{ feedback.tecnico|linebreaks }}
 
-      <p><strong>Parte do esperado com essa atividade era que os alunos entendessem melhor qual era o desafio
-      proposto e discutissem com vocês como prototipar e implementar o acordado. Os alunos foram
+      <p><strong>Parte do esperado com essa atividade era que os estudantes entendessem melhor qual era o desafio
+      proposto e discutissem com vocês como prototipar e implementar o acordado. Os estudantes foram
       ativos em se comunicar, entendendo o desejo de vocês (e de seus usuários finais se for o
       caso) e discutir possíveis soluções? Você pode comentar brevemente como foram essas interações?
       </strong></p>
       {{ feedback.comunicacao|linebreaks }}
 
-      <p><strong>A equipe de alunos alocada para o seu projeto estava devidamente organizada? Por exemplo:
-      os alunos foram pontuais nos encontros, se portaram de forma adequada, todos se dedicaram
+      <p><strong>A equipe de estudantes alocada para o seu projeto estava devidamente organizada? Por exemplo:
+      os estudantes foram pontuais nos encontros, se portaram de forma adequada, todos se dedicaram
       de acordo, apresentaram uma proposta de condução do projeto adequada?
       </strong></p>
       {{ feedback.organizacao|linebreaks }}
