--- a/projetos/static/css/horizBarChart.css
+++ b/projetos/static/css/horizBarChart.css
@@ -1,10 +1,10 @@
-.chart{zoom:1;width:95%}
+.chart{zoom:1;width:98%;padding-left:4px;}
 .chart:after{clear:both;content:'.';display:block;height:0;visibility:hidden}
-.chart li{display:block;height:15px;margin-top:3px;position:relative}
+.chart li{display:block;height:14px;margin-top:3px;position:relative}
 .chart li:before{color:#fff;content:attr(title);left:5px;position:absolute}
 .chart li.title:before{color:black;left:0}.chart li:first-child{margin-top:0}
 .chart li .bar{background:black;height:100%}
-.chart li .number{color:black;font-size:16px;font-weight:bold;padding-left:5px;position:absolute;top:-2px}
+.chart li .number{color:black;font-size:16px;font-weight:bold;padding-left:4px;position:absolute;top:-2px}
 .chart li.past .bar{background: #5b5b5b;}
 .chart li.past .number{color:#5b5b5b;}
 @media screen and (max-width: 480px){
